# baseDiscord-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
baseDiscord/: __init__.py  baseBot.py  help.py  helpMessage.py
baseDiscord/cogs/: __init__.py  help.py  owner.py
baseDiscord/utils/: __init__.py  checks.py  logging.py  manage_messages.py
