[metadata]
name = baseDiscord
version = 2.0.0
author = LostPy
license = MIT
description = This package give a base of Discord Bot to develop quickly a Discord Bot with py-cord.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/LostPy/baseDiscord-py
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =.
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = 
    py-cord==2.0.0b7
    colorama

[options.packages.find]
where=.
